--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,9 +5,25 @@ build:
   tools:
     python: "3.10"
 
-python:
-  install:
-    - requirements: docs/requirements.txt
+  jobs:
+    post_create_environment:
+      # Install poetry
+      # https://python-poetry.org/docs/#installing-manually
+      - pip install poetry
+    post_install:
+      # Install dependencies with 'docs' dependency group
+      # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
+      # VIRTUAL_ENV needs to be set manually for now.
+      # See https://github.com/readthedocs/readthedocs.org/pull/11152/
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with docs
 
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: docs/conf.py
+
+
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
+#
+# sphinx:
+#   configuration: docs/source/conf.py
